--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -18,8 +18,8 @@
         <p class="fs-5 font-monospace pe-5 me-5">
           A comprehensive financial application designed to help users manage
           their investments and track their expenses. We offers a user-friendly
-          interface with robust features for monitoring investments portfolios
-          and savings.
+          interface with robust features for monitoring investments portfolios,
+          transactions and mortgages.
         </p>
         <div>
           <p-button
@@ -56,21 +56,20 @@
   >
     <div class="d-flex justify-content-center align-items-center">
       <h2>
-        <span class="grey">We offers </span
+        <span class="grey">We provides services to manage </span
         ><span
           ><a href="#investment-management"
-            ><fa-icon [icon]="investmentIcon"></fa-icon> Investment
-            Management</a
-          ></span
+            ><fa-icon [icon]="investmentIcon"></fa-icon> Investments
+          </a></span
         >,
         <span
           ><a href="#expense-tracker"
-            ><fa-icon [icon]="pieChartIcon"></fa-icon> Expense Tracker</a
+            ><fa-icon [icon]="pieChartIcon"></fa-icon> Transactions</a
           ></span
         >,
         <span
           ><a href="#mortgage-calculator"
-            ><fa-icon [icon]="calculator"></fa-icon> Mortgage Calculator</a
+            ><fa-icon [icon]="calculator"></fa-icon> Mortgages</a
           ></span
         >
         and etc.
@@ -131,7 +130,7 @@
     </div>
     <div class="col-5 d-flex justify-content-start align-items-center">
       <div class="d-flex flex-column align-items-start">
-        <h1>Expense <span class="grey">Tracker</span></h1>
+        <h1>Transactions <span class="grey">Insights</span></h1>
         <p class="fs-5 font-monospace">
           We offers an integrated expense tracking system. Users can record and
           categorize their expenses, set budgets, and receive personalized
@@ -160,7 +159,7 @@
   >
     <div class="col-5 d-flex justify-content-end align-items-center">
       <div class="d-flex flex-column align-items-start">
-        <h1>Mortgage <span class="grey">Calculator</span></h1>
+        <h1>Mortgage <span class="grey">Portfolio</span></h1>
         <p class="fs-5 font-monospace">
           We help users to estimate their monthly mortgage payments based on
           factors such as loan amount, interest rate, and loan term.
