--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -56,7 +56,7 @@
   >
     <div class="d-flex justify-content-center align-items-center">
       <h2>
-        <span class="grey">We provides services to manage </span
+        <span class="grey">We offer tools to manage </span
         ><span
           ><a href="#investment-management"
             ><fa-icon [icon]="investmentIcon"></fa-icon> Investments
