--- a/client/project/src/app/component/regular-transactions/regular-transactions.component.html
+++ b/client/project/src/app/component/regular-transactions/regular-transactions.component.html
@@ -10,121 +10,62 @@
     </div>
   </div>
 
-  <div class="row justify-content-center align-items-center mt-3">
-    <div class="col-12 custom-background">
-      <p-table
-        id="dt1"
-        #dt1
-        [value]="regularTransactions"
-        [loading]="loading"
-        [tableStyle]="{ 'min-width': '50rem' }"
-        [globalFilterFields]="['symbol', 'name', 'quantity', 'date']"
-        [paginator]="true"
-        [rows]="5"
-        [showCurrentPageReport]="true"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[5, 10, 15, 50]"
-      >
-        <ng-template pTemplate="caption">
-          <div class="d-flex flex-row-reverse align-items-center">
-            <div>
-              <button
-                pButton
-                label="Clear"
-                class="p-button-outlined"
-                icon="pi pi-filter-slash"
-                (click)="clear(dt1)"
-              ></button>
-              <span class="p-input-icon-left ml-auto">
-                <i class="pi pi-search"></i>
-                <input
-                  id="input1"
-                  #input1
-                  pInputText
-                  type="text"
-                  (input)="dt1.filterGlobal(input1.value, 'contains')"
-                  placeholder="Search keyword"
-                />
-              </span>
+  <div class="row justify-content-center align-items-start mt-3 custom-height">
+    <div class="col-10">
+      <div *ngIf="regularTransactions.length > 0; else emptyRegularTransaction">
+        <div
+          *ngFor="let reg of regularTransactions"
+          class="regu-transaction-pill my-3 py-2 px-4"
+        >
+          <div class="d-flex justify-content-between align-items-center">
+            <h4>
+              <span
+                ><p-tag [severity]="getSeverity(reg.tran.type)">
+                  <span>{{ reg.tran.type | uppercase }}</span>
+                </p-tag></span
+              >
+              {{ reg.tran.transactionName }}
+              <span class="fs-6 font-monospace"
+                >({{ reg.tran.categoryName }})</span
+              >
+            </h4>
+
+            <p class="fs-5 font-monospace">
+              Next transaction:
+              {{ getDate(reg.tran.date) }}
+            </p>
+          </div>
+
+          <div class="d-flex justify-content-between align-items-center">
+            <p class="fs-5 font-monospace">Amount: {{ reg.tran.amount }}</p>
+            <div class="d-flex justify-content-evenly align-items-center">
+              <p-inputSwitch
+                [(ngModel)]="reg.active"
+                (onChange)="toggleAcitveState(reg.active, reg.id)"
+              ></p-inputSwitch>
+
+              <p-button
+                icon="pi pi-times"
+                styleClass="p-button-rounded p-button-danger p-button-text"
+                (onClick)="
+                  deleteSelectedTransaction(
+                    $event,
+                    reg.id,
+                    reg.tran.transactionName
+                  )
+                "
+              ></p-button>
             </div>
           </div>
-        </ng-template>
-        <ng-template pTemplate="header">
-          <tr>
-            <th style="width: 14.3%" pSortableColumn="date">
-              Date <p-sortIcon field="date"></p-sortIcon>
-            </th>
-            <th style="width: 14.3%">Name</th>
-            <th style="width: 14.3%" pSortableColumn="amount">
-              Amount <p-sortIcon field="amount"></p-sortIcon>
-            </th>
-            <th style="width: 14.3%">Category</th>
-            <th style="width: 14.3%">
-              Type
-              <p-columnFilter
-                type="text"
-                field="type"
-                display="menu"
-              ></p-columnFilter>
-            </th>
-            <th style="width: 14.3%">Remarks</th>
-            <th style="width: 14.3%">Action</th>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="body" let-stock>
-          <tr>
-            <td>
-              <span class="d-flex justify-content-evenly align-items-center">
-                <p-avatar [image]="stock.logo" shape="circle"></p-avatar>
-                <span>
-                  <p-button
-                    [label]="stock.symbol"
-                    styleClass="p-button-text p-button-primary"
-                    tooltipPosition="right"
-                  >
-                  </p-button>
-                  <!-- {{ stock.symbol }} -->
-                </span>
-              </span>
-            </td>
-            <td>{{ stock.name }}</td>
-            <td>{{ stock.date | date }}</td>
-            <td>
-              {{ stock.quantity }}
-            </td>
-            <td>{{ stock.price | currency }}</td>
-            <td>{{ stock.marketPrice | currency }}</td>
-            <td>
-              {{ stock.percentage | percent : "1.2-2" }}
-            </td>
-            <td>
-              <span class="me-2">
-                <p-button
-                  icon="pi pi-trash"
-                  type="button"
-                  styleClass="p-button-rounded p-button-danger"
-                  (onClick)="deleteSelectedTransaction($event, stock)"
-                ></p-button>
-              </span>
-            </td>
-          </tr>
-        </ng-template>
-        <ng-template pTemplate="paginatorleft">
-          <p-button
-            type="button"
-            icon="pi pi-plus"
-            styleClass="p-button-text"
-            [routerLink]="'/investment'"
-          ></p-button>
-        </ng-template>
-        <ng-template pTemplate="paginatorright">
-          <p-button
-            type="button"
-            icon="pi pi-refresh"
-            styleClass="p-button-text"
-          ></p-button>
-        </ng-template>
-      </p-table>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center align-items-center">
+        <p-button
+          icon="pi pi-plus"
+          styleClass="p-button-rounded  p-button-text p-button-raised"
+          (onClick)="addTransaction()"
+        ></p-button>
+      </div>
     </div>
   </div>
 
@@ -132,3 +73,30 @@
   <!-- SCROLL UP BTN -->
   <p-scrollTop></p-scrollTop>
 </div>
+
+<ng-template #emptyRegularTransaction>
+  <div class="row justify-content-center align-items-center my-3">
+    <div
+      class="col-10 d-flex justify-content-center align-items-center h1card"
+      [style]="{ height: '50dvh' }"
+    >
+      <div class="d-flex flex-column align-items-center">
+        <div>
+          <h3>
+            Oh Snap! Empty Records
+            <fa-icon [icon]="emptyIcon" animation="spin-pulse"></fa-icon>
+          </h3>
+        </div>
+
+        <div class="my-5 d-flex flex-column justify-content-evenly">
+          <div class="mt-2" class="add-transaction" (click)="addTransaction()">
+            <h5>
+              <fa-icon [icon]="pointRightIcon"></fa-icon>
+              Add a regular transaction (toggle button below the form)
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
