--- a/client/project/src/app/component/stock-details/stock-details.component.html
+++ b/client/project/src/app/component/stock-details/stock-details.component.html
@@ -1,1 +1,90 @@
-<p>stock-details works!</p>
+<div class="container">
+  <p-breadcrumb
+    class="max-w-full m-2"
+    [model]="breadcrumbItems"
+    [home]="breadcrumbHome"
+  ></p-breadcrumb>
+
+  <div
+    *ngIf="stockProfile"
+    class="row justify-content-evenly align-items-center"
+  >
+    <div class="col-5 stock-profile">
+      <p-image
+        [src]="stockProfile.logo"
+        alt="company-logo"
+        width="100"
+        [preview]="true"
+      ></p-image>
+      <h3 class="mt-2">
+        {{ stockProfile.name }}
+        <span>({{ stockProfile.symbol }})</span>
+      </h3>
+      <div class="d-flex justify-content-between align-items-center">
+        <p class="fs-5 font-monospace">Country:</p>
+        <p class="fs-5 font-monospace">{{ stockProfile.country }}</p>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <p class="fs-5 font-monospace">Industry:</p>
+        <p class="fs-5 font-monospace">{{ stockProfile.industry }}</p>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <p class="fs-5 font-monospace">CEO:</p>
+        <p class="fs-5 font-monospace">
+          {{ stockProfile.companyOfficers[0].name }}
+        </p>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <p class="fs-5 font-monospace">Employees:</p>
+        <p class="fs-5 font-monospace">
+          {{ stockProfile.fulltimeEmployees | number }}
+        </p>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <p class="fs-5 font-monospace">Website:</p>
+        <a
+          class="fs-5 font-monospace"
+          [href]="stockProfile.website"
+          target="_blank"
+        >
+          {{ stockProfile.website }}
+        </a>
+      </div>
+      <div class="d-flex justify-content-between align-items-center">
+        <p class="fs-5 font-monospace">Sentiment:</p>
+        <p-rating
+          [(ngModel)]="stockSentiment"
+          [readonly]="true"
+          [cancel]="false"
+        ></p-rating>
+      </div>
+    </div>
+    <div class="col-6">
+      <!-- LINE CHART -->
+      <div *ngIf="!skeletonLoading; else skeleton">
+        <p-chart
+          type="line"
+          [data]="lineData"
+          [options]="lineOptions"
+        ></p-chart>
+      </div>
+    </div>
+  </div>
+  <div
+    *ngIf="stockProfile"
+    class="row justify-content-evenly align-items-center mt-2"
+  >
+    <div class="col-11 stock-profile">
+      <div class="d-flex justify-content-between align-items-center">
+        <h5 class="text-decoration-underline">Business Summary</h5>
+      </div>
+      <p-scrollPanel [style]="{ width: '100%', height: '20dvh' }">
+        <p class="lh-lg">
+          {{ stockProfile.longBusinessSummary }}
+        </p>
+      </p-scrollPanel>
+    </div>
+  </div>
+</div>
+
+<ng-template #skeleton> <p-skeleton height="20rem"></p-skeleton></ng-template>
