stock ideas section

--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -170,9 +170,9 @@
                       ></span>
                       <span
                         *ngIf="!skeletonLoading; else loading"
-                        [className]="getProfitColorClass(savingsValue())"
+                        [className]="getProfitColorClass(savingsValueYearly())"
                       >
-                        {{ savingsValue() | currency }}
+                        {{ savingsValueYearly() | currency }}
                       </span>
                     </span>
                     <span *ngIf="showTotalExpense">
