--- a/client/project/src/app/component/stock-details/stock-details.component.html
+++ b/client/project/src/app/component/stock-details/stock-details.component.html
@@ -6,7 +6,7 @@
   ></p-breadcrumb>
 
   <div
-    *ngIf="stockProfile"
+    *ngIf="stockProfile; else loading"
     class="row justify-content-evenly align-items-center"
   >
     <div class="col-5 font-color">
@@ -30,7 +30,10 @@
         <p class="fs-5 font-monospace">Industry:</p>
         <p class="fs-5 font-monospace">{{ stockProfile.industry }}</p>
       </div>
-      <div class="d-flex justify-content-between align-items-center">
+      <div
+        *ngIf="stockProfile.companyOfficers.length > 0"
+        class="d-flex justify-content-between align-items-center"
+      >
         <p class="fs-5 font-monospace">CEO:</p>
         <p class="fs-5 font-monospace">
           {{ stockProfile.companyOfficers[0].name }}
@@ -194,3 +197,13 @@
 </div>
 
 <ng-template #skeleton> <p-skeleton height="20rem"></p-skeleton></ng-template>
+<ng-template #loading>
+  <div class="d-flex justify-content-center align-items-center m-5">
+    <p-progressSpinner
+      styleClass="w-4rem h-4rem"
+      strokeWidth="8"
+      fill="var(--surface-ground)"
+      animationDuration=".5s"
+    ></p-progressSpinner>
+  </div>
+</ng-template>
