--- a/client/project/src/app/component/dashboard/dashboard.component.html
+++ b/client/project/src/app/component/dashboard/dashboard.component.html
@@ -244,7 +244,7 @@
           <div class="col-10 linebackground">
             <div class="d-flex flex-row-reverse mb-2">
               <p-button
-                (click)="op.toggle($event)"
+                (click)="showDialog()"
                 icon="pi pi-chart-line"
                 label="Set Goal"
                 styleClass="p-button-rounded"
@@ -261,6 +261,7 @@
       </section>
     </section>
 
+    <!-- 
     <p-overlayPanel #op>
       <ng-template pTemplate="content">
         <h6>Enter your yearly goal</h6>
@@ -275,7 +276,7 @@
           />
         </form>
       </ng-template>
-    </p-overlayPanel>
+    </p-overlayPanel> -->
   </div>
   <p-toast></p-toast>
   <!-- SCROLL UP BTN -->
@@ -320,7 +321,7 @@
           <div
             *ngIf="showAddGoal"
             class="add-transaction mb-3"
-            (click)="op.toggle($event)"
+            (click)="showDialog()"
           >
             <h5>
               <fa-icon [icon]="pointRightIcon"></fa-icon>
@@ -355,3 +356,45 @@
     </div>
   </div>
 </ng-template>
+
+<dialog #appDialog id="dialogModal">
+  <header>
+    <h2 class="header">Yearly Goal</h2>
+    <button (click)="closeDialog()" id="closeDialogHeader">x</button>
+  </header>
+
+  <section>
+    <form [formGroup]="goalForm">
+      <label for="yearInput" class="fs-4">Enter your yearly goal: </label>
+      <input
+        class="ms-2 fs-4"
+        type="number"
+        inputmode="numeric"
+        formControlName="goal"
+      />
+    </form>
+  </section>
+
+  <footer>
+    <div class="d-flex justify-content-center mt-3">
+      <button
+        class="dialogBtn"
+        type="button"
+        (click)="closeDialog()"
+        id="closeDialogFooterBtn"
+        [style]="{ width: '30%' }"
+      >
+        Close
+      </button>
+      <button
+        id="dialogSubmitButton"
+        class="ms-3 dialogBtn"
+        type="button"
+        (click)="submitGoal()"
+        [disabled]="goalForm.invalid"
+      >
+        Submit
+      </button>
+    </div>
+  </footer>
+</dialog>
