--- a/client/project/src/app/component/stock-details/stock-details.component.html
+++ b/client/project/src/app/component/stock-details/stock-details.component.html
@@ -80,7 +80,10 @@
           {{ stockProfile.stockSummaryData.volume | number }}
         </p>
       </div>
-      <div class="d-flex justify-content-between align-items-center">
+      <div
+        *ngIf="stockProfile.stockSummaryData.marketCap > 0"
+        class="d-flex justify-content-between align-items-center"
+      >
         <p class="fs-5 font-monospace">Market Cap:</p>
         <p class="fs-5 font-monospace">
           {{ stockProfile.stockSummaryData.marketCap / 1000000000 | number }}
@@ -169,10 +172,7 @@
         <div class="col-8">
           <div class="d-flex justify-content-between align-items-center">
             <p>{{ idea.fullName }}</p>
-            <p-button
-              icon="pi pi-times"
-              styleClass="p-button-rounded p-button-danger p-button-text"
-            ></p-button>
+            <p>{{ idea.date | date }}</p>
           </div>
           <div class="d-flex justify-content-between align-items-center">
             <p-rating
@@ -181,8 +181,10 @@
               [cancel]="false"
             ></p-rating>
             <p-button
-              icon="pi pi-pencil"
-              styleClass="p-button-rounded p-button-text"
+              *ngIf="isUserIdea(idea.userId)"
+              icon="pi pi-trash"
+              styleClass="p-button-rounded p-button-text p-button-danger"
+              (onClick)="deleteIdea(idea.id)"
             ></p-button>
           </div>
           <p>{{ idea.idea }}</p>
